--- a/BakingApp/app/build.gradle
+++ b/BakingApp/app/build.gradle
@@ -29,8 +29,12 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
+
+    compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+
+    //use gson to store the recipe object in shared preference
+    compile 'com.google.code.gson:gson:2.7'
     testCompile 'junit:junit:4.12'
 }
